--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,35 +1,41 @@
 {
-  "name": "UET HAN-Nom",
-  "description": "Nhận diện chữ viết Hán-Nôm",
-  "version": "1.0",
-  "manifest_version": 2,
-  "browser_action": {
+	"name": "Crop and Screen Capture UET",
+	"version": "0.1.0",
+	"manifest_version": 2,
+	"description": "Select area of screen and take screenshot",
+
+	"icons": {
+		"16": "img/icon16.png",
+		"48": "img/icon48.png",
+		"128": "img/icon128.png"
+	},
+	
+	"background": {
+		"scripts": [
+			"js/background.js"
+		],
+		"persistent": false
+	},
+	
+	"content_scripts": [
+		{
+			"matches": ["http://*/*", "https://*/*"],
+			"js": ["js/content.js"],
+	        "run_at": "document_end",
+	        "all_frames": true
+		}
+	],
+	
+	"browser_action": {
     "default_popup": "index.html",
-    "default_title": "Open the popup"
-  },
-  "background" : {
-    "scripts": [
-      "background/background.js"
-    ],
-    "persistent": false
-  },
-  "web_accessible_resources": [
-    "/images/Jcrop.gif",
-    "/images/pixel.png"
-  ],
-  "commands": {
-    "take-screenshot": {
-      "suggested_key": {
-        "default": "Alt+S"
-      },
-      "description": "Take Screenshot"
-    }
-  },
-  "optional_permissions": [
-    "<all_urls>"
-  ],
-  "permissions": [
-    "storage",
-    "activeTab"
-  ]
+		"default_title": "Crop and Screen Capture",
+		"default_icon": "img/icon.png"
+	},
+	
+	"permissions": [
+		"tabs",
+		"activeTab",
+		"http://*/*",
+		"https://*/*"
+	]
 }
