--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,35 +1,39 @@
 {
-	"name": "Crop and Screen Capture UET",
-	"version": "0.1.0",
-	"manifest_version": 2,
-	"description": "Select area of screen and take screenshot",
-	
-	"background": {
-		"scripts": [
-			"js/background.js"
-		],
-		"persistent": false
-	},
-	
-	"content_scripts": [
-		{
-			"matches": ["http://*/*", "https://*/*"],
-			"js": ["js/content.js"],
-	        "run_at": "document_end",
-	        "all_frames": true
-		}
-	],
-	
-	"browser_action": {
+  "manifest_version": 2,
+  "name": "Screenshot Capture",
+  "version": "2.0",
+  "description": "Screenshot Capture",
+
+  "browser_action": {
     "default_popup": "index.html",
-		"default_title": "Crop and Screen Capture",
-		"default_icon": "img/icon.png"
-	},
-	
-	"permissions": [
-		"tabs",
-		"activeTab",
-		"http://*/*",
-		"https://*/*"
-	]
+    "default_icon": {
+      "19": "/images/icon19.png",
+      "38": "/images/icon38.png"
+    },
+    "default_title": "Screenshot Capture"
+  },
+
+  "background": {
+    "scripts": ["background/background.js"],
+    "persistent": false
+  },
+
+  "web_accessible_resources": ["/images/Jcrop.gif", "/images/pixel.png"],
+
+  "commands": {
+    "take-screenshot": {
+      "suggested_key": {
+        "default": "Alt+S"
+      },
+      "description": "Take Screenshot"
+    }
+  },
+
+  "icons": {
+    "16": "images/icon16.png",
+    "48": "images/icon48.png",
+    "128": "images/icon128.png"
+  },
+
+  "permissions": ["storage", "activeTab"]
 }
